--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<div>
+    <select class="form-select" style="width: 10%;" (change)="changeLg($event.target)">
+        <option  value="en" [selected]="lang == 'en'">EN</option>
+        <option  value="geo" [selected]="lang == 'geo'">GEO</option>
+    </select>
+</div>
 <router-outlet></router-outlet>
-
-<app-info></app-info>
