--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -5,6 +5,7 @@
     </select>
     <div >
         <!-- logic have to be added, it should appear only when token will be presented -->
+        <!-- test changes -->
         <button class="btn btn-danger" (click)="logout()">Log out</button>
     </div>
 </div>
