--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -6,6 +6,7 @@
     <div >
         <!-- logic have to be added, it should appear only when token will be presented -->
         <!-- test changes -->
+         <!-- test changes 2 -->
         <button class="btn btn-danger" (click)="logout()">Log out</button>
     </div>
 </div>
